--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "chart.js": "^4.4.7",
+    "vue": "^3.2.45",
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
